--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               Enthuasiast Web Developer, Mobile Developer and Project Management
             </p>
             <a
-              href="#"
+              href="#contact"
               class="text base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:bg-cyan-400 transition duration-200 ease-in-out"
             >
               Contact Me</a
@@ -158,8 +158,10 @@
               Kenalan Yuk!
             </h2>
             <p class="text-base text-slate-400 max-w-xl">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur doloremque neque quos est labore minus nisi.
+              Lulusan S1 Sistem Informasi Binus University. 
+              Memiliki ketertarikan pada bidang web & mobile developer. 
+              Mencari peluang kerja atau internship yang memberi kesempatan untuk 
+              berkembang dalam bidang software & web development.
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
@@ -169,9 +171,9 @@
               Social Media
             </h3>
             <p class="text-base text-slate-400 max-w-xl">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Architecto quae deserunt itaque rem? Architecto aperiam odio error
-              quam iste nesciunt?
+              Yuk kita saling terhubung di sosial media! 
+              mau sekadar lihat-lihat juga boleh. 
+              Barangkali bisa berbagi kehidupan biar gak kesepian.
             </p>
             <div class="flex items-center mt-3">
               <!-- Instagram -->
@@ -279,7 +281,7 @@
     <section id="portofolio" class="pt-32 pb-16 bg-slate-700">
       <div class="container">
         <div class="w-full px-4">
-          <div class="mx-auto text-center mb-16">
+          <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
             <h2
               class="font-bold text-white text-3xl mb-3 sm:text-4xl lg:text-5xl"
@@ -287,9 +289,8 @@
               Project
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              veritatis consequatur nemo, eum, repellat cum iusto, totam sequi
-              molestias esse eligendi quam. Ad, libero!
+              Berikut adalah beberapa contoh project yang sudah selesai dikerjakan. 
+              Saat ini masih dalam tahap belajar untuk membuat website untuk kebutuhan pribadi.
             </p>
           </div>
         </div>
@@ -298,26 +299,30 @@
         >
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="#gambar1" alt="Landing Page" width="w-full" />
+              <img src="dist/img/landing.png" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Portofolio 1
+              Home Page
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              animi odit quam!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Velit exercitationem, asperiores mollitia amet rerum dicta 
+              quo debitis voluptatibus assumenda repudiandae quae quos, 
+              suscipit fuga nam optio. Velit consequuntur earum totam.
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="#gambar2" alt="Landing Page" width="w-full" />
+              <img src="dist/img/pm.png" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Portofolio 2
+              Project Management
             </h3>
             <p class="font-medium text-base text-secondary">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              animi odit quam!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Velit exercitationem, asperiores mollitia amet rerum dicta 
+              quo debitis voluptatibus assumenda repudiandae quae quos, 
+              suscipit fuga nam optio. Velit consequuntur earum totam.
             </p>
           </div>
         </div>
@@ -336,9 +341,9 @@
               Photo & Video
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              veritatis consequatur nemo, eum, repellat cum iusto, totam sequi
-              molestias esse eligendi quam. Ad, libero!
+              Berikut adalah mini galeri pribadi yang diabadikan melalui fotografi.
+              Diantaranya ada beberapa kegiatan sosial, travelling, serta
+              kegiatan mengisi sela waktu.
             </p>
           </div>
           <div
@@ -346,26 +351,24 @@
           >
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="#gambar1" alt="Gallery 1" width="w-full" />
+                <img src="dist/img/3.jpg" alt="Gallery 1" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
-                Kaki Sembalun
+                Kaki Rinjani
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                animi odit quam!
+                September 2018 - Desa Sembalun Bumbung, Kecamatan Sembalun, Kabupaten Lombok Timur
               </p>
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="#gambar2" alt="Gallery 2" width="w-full" />
+                <img src="dist/img/4.jpg" alt="Gallery 2" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
                 Kota Bawang
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                animi odit quam!
+                Januari 2017 - Desa Kamal, Kecamatan Larangan, Kabupaten Brebes
               </p>
             </div>
           </div>
@@ -385,9 +388,9 @@
               Story
             </h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              veritatis consequatur nemo, eum, repellat cum iusto, totam sequi
-              molestias esse eligendi quam. Ad, libero!
+              Karena di setiap waktu ada hal-hal baru, dan di setiap tempat ada cerita yang menyapa.
+              Media saya dalam berbagi kehidupan dengan teman-teman. Menarik? belum tentu, tapi 
+              saya yakin ada sedikit ekspresi yang bisa dibagi.
             </p>
           </div>
           <div
@@ -395,27 +398,35 @@
           >
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="#gambar1" alt="Blog 1" width="w-full" />
+                <img src="dist/img/1.jpg" alt="Blog 1" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
                 #LangitSembalun
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                animi odit quam!
+                Paska bencana gempa bumi tahun 2018, mungkin menjadi saksi
+                bagi anak-anak di Sembalun untuk dapat menjalankan kehidupan yang
+                mungkin berbeda dari sebelumnya. Pasalnya, gesekan bumi yang sempat terjadi
+                dalam skala 6,4 magnitudo itu membuat trauma seluruh masyarakat Lombok.
+                Di SDN 2 Sembalun, gempa susulan yang sering terjadi setelah bulan Juli itu 
+                berjalan paralel dengan reaksi murid yang langsung berlarian ke lapangan....
               </p>
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="#gambar2" alt="Blog 2" width="w-full" />
+                <img src="dist/img/2.JPG" alt="Blog 2" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
                 #LangitBrebes
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                animi odit quam!
-              </p>
+                “Kenapa orang–orang ini mau untuk merelakan kenyamanannya yang sudah 
+                mereka dapatkan di lingkungan rumah dan sekolah untuk ia berikan kepada 
+                orang-orang yang bahkan belum bertemu sebelumnya?” “Mungkin seseorang akan 
+                merelakan kenyamanannya karena ia tahu bahwa kenyamanan yang ada pada dirinya akan hilang kalau
+                ia tidak memberi kenyamanan itu kepada orang lain. Bukankah prinsip memberi adalah 
+                justru mendapat nilai yang lebih dari nilai memberi itu sendiri.”
+
             </div>
           </div>
         </div>
@@ -436,7 +447,7 @@
             <p>DKI Jakarta, 12520</p>
           </div>
         </div>
-        <p class="font-medium text-[0,75rem] text-slate-500 text-center">©2022 <span class="font-bold text-primary">Dony Afrizal </span> | Belajar membuat web dengan Web Programming UNPAS</p>
+        <p class="font-medium text-[0,75rem] text-slate-500 text-center">©2022 <span class="font-bold text-primary">Dony Afrizal </span> | Belajar membuat web dengan Tailwind CSS</p>
       </div>
     </footer>
     <!-- Footer Finish -->
