Memperbarui gambar pada documentation dan blog

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="dist/img/4.jpg" alt="Gallery 2" width="w-full" />
+                <img src="dist/img/4.JPG" alt="Gallery 2" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
                 Kota Bawang
@@ -414,7 +414,7 @@
             </div>
             <div class="mb-12 p-4 md:w-1/2">
               <div class="rounded-md shadow-md overflow-hidden">
-                <img src="dist/img/2.JPG" alt="Blog 2" width="w-full" />
+                <img src="dist/img/2.jpg" alt="Blog 2" width="w-full" />
               </div>
               <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
                 #LangitBrebes
